--- a/index.html
+++ b/index.html
@@ -1,17 +1,30 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>Mi pagina de prueba</title>
-  </head>
-  <body>
-  <ul>
-   <li><h1>Whilmer Fernández</h1></li>
-   <li><h1>Ingenieria de sistemas</h1></li>
-   <li><h1>04 septiembre 2020</h1></li>
-   <li><h1>3218737685</h1></li>
-   <li><h1>Universidad Nacional Abierta y a Distancia</h1></li>   
-</ul>  
-    <img src="images/firefox-icon.png" alt="Mi imagen de prueba">
-  </body>
+</head>
+
+<body>
+    <ul>
+        <li>
+            <h1>Whilmer Fernández</h1>
+        </li>
+        <li>
+            <h1>Ingenieria de sistemas</h1>
+        </li>
+        <li>
+            <h1>04 septiembre 2020</h1>
+        </li>
+        <li>
+            <h1>3218737685</h1>
+        </li>
+        <li>
+            <h1>Universidad Nacional Abierta y a Distancia</h1>
+        </li>
+    </ul>
+    <a href="planning.html">Planning</a></p>
+</body>
+
 </html>
