--- a/planning.html
+++ b/planning.html
@@ -40,8 +40,10 @@
                 <font color="Olive">Qué diferencias hay entre display:block, inline e inline-block en CSS:</font><br>https://www.campusmvp.es/recursos/post/Que-diferencias-hay-entre-display-block-inline-e-inline-block-en-CSS.aspx.<br>
         </section>
     </font>
-    <img src="images/firefox-icon.png" alt="Mi imagen de prueba">
-    <a href="https://www.mozilla.org/es-AR/about/manifesto/">Manifesto Mozilla</a>
+    <font color="Olive">
+        <h2><i>Maqueta <b>(MockUp)</b></i></h2>
+    </font>
+    <img width="600" height="500" alt="MockUp" src="https://github.com/whilfer18/-DSW-WhilmerFernandez/blob/master/maqueta.PNG?raw=true" />
 </body>
 
 </html>
