--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <h1>Universidad Nacional Abierta y a Distancia</h1>
         </li>
     </ul>
-    <a href="planning.html">Planning</a></p>
+    <input type="button" onclick="location.href='planning.html';" value="Go to Planning" />
 </body>
 
 </html>
