--- a/autoevaluacion.html
+++ b/autoevaluacion.html
@@ -22,7 +22,7 @@
     </header>
     <nav>
         <ul class="menu">
-            <li><a href="Inicio.html">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li class="boton"><a href="#">Conceptos</a>
                 <div class="listaDesplegable">
                     <a href="concepto.html">Display</a>
