--- a/concepto.html
+++ b/concepto.html
@@ -116,9 +116,9 @@
         </section>
         <aside>
             <div>
-                <a class="twitter-timeline" data-lang="es" data-width="410" data-height="590" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
+                <a class="twitter-timeline" data-lang="es" data-width="410" data-height="500" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                <a class="twitter-timeline" data-lang="es" data-width="405" data-height="590" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
+                <a class="twitter-timeline" data-lang="es" data-width="410" data-height="700" data-theme="light" href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
         </aside>
