--- a/autoevaluacionDos.html
+++ b/autoevaluacionDos.html
@@ -26,21 +26,10 @@
             <li class="boton"><a href="#">Conceptos</a>
                 <div class="listaDesplegable">
                     <a href="concepto.html">Display</a>
-                    <a href="conceptoUno.html">inline-block</a>
                 </div>
             </li>
-            <li class="boton"><a href="#">Recursos</a>
-                <div class="listaDesplegable">
-                    <a href="recursos.html">Recurso 1</a>
-                    <a href="recursosDos.html">Recurso 2</a>
-                </div>
-            </li>
-            <li class="boton"><a href="#">Autoevaluación</a>
-                <div class="listaDesplegable">
-                    <a href="autoevaluacion.html">Autoevaluación 1</a>
-                    <a href="autoevaluacionDos.html">Autoevaluación 1</a>
-                </div>
-            </li>
+            <li><a href="recursos.html">Recursos</a></li>
+            <li><a href="autoevaluacion.html">Autoevaluación</a></li>
             <li><a href="autor.html">Autor</a></li>
         </ul>
     </nav>
