--- a/conceptoUno.html
+++ b/conceptoUno.html
@@ -49,29 +49,35 @@
             <ul class="cards">
                 <li class="cards_item">
                     <div class="card">
-                        <div class="card_image"><img src="img/img_personal.jpg"></div>
+                        <div class="card_image"><img src="img/display-inline-block.svg"></div>
                         <div class="card_content">
-                            <h2 class="card_title">Autor</h2>
-                            <p class="card_text">
-                                <ul>
-                                    <li class="viñeta">Nombre:Whilmer Fernández</li>
-                                    <li class="viñeta">Programa:Ingeniería de sistemas</li>
-                                    <li class="viñeta">Fecha de Creación:20-10-2020</li>
-                                    <li class="viñeta">WhasthApp:3218737685</li>
-                                    <li class="viñeta">Skype:whilfer18</li>
-                                    <li class="viñeta">Correo:whilferrivera@gmail.com</li>
-                                </ul>
+                            <h2 class="card_title">La propiedad CSS display</h2>
+                            <p class="card_text">Uno de los valores más curiosos de display es inline-block, que crea cajas que son de bloque y en línea de forma simultánea. Una caja de tipo inline-block se comporta como si fuera de bloque, pero respecto a los elementos que
+                                la rodean es una caja en línea.
                             </p>
                             <!-- <button class="btn card_btn">Read More</button> -->
                         </div>
                     </div>
                 </li>
             </ul>
-
+            <!--tabla -->
+            <ul class="cards">
+                <li class="cards_item">
+                    <div class="card">
+                        <div class="card_image"><img src="img/inline2.png"></div>
+                        <div class="card_content">
+                            <h2 class="card_title">La propiedad CSS display</h2>
+                            <p class="card_text">Los elementos inline-block fluyen con el texto y demás elementos como si fueran elementos en-línea y además respetan el ancho, el alto y los márgenes verticales.
+                            </p>
+                            <!-- <button class="btn card_btn">Read More</button> -->
+                        </div>
+                    </div>
+                </li>
+            </ul>
         </section>
         <aside>
             <div>
-                <a class="twitter-timeline" data-lang="es" data-width="410" data-height="240" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
+                <a class="twitter-timeline" data-lang="es" data-width="410" data-height="420" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <a class="twitter-timeline" data-lang="es" data-width="410" data-height="700" data-theme="light" href="https://twitter.com/NASA?ref_src=twsrc%5Etfw">Tweets by NASA</a>
                 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
