--- a/recursosDos.html
+++ b/recursosDos.html
@@ -38,7 +38,7 @@
             <li class="boton"><a href="#">Autoevaluación</a>
                 <div class="listaDesplegable">
                     <a href="autoevaluacion.html">Autoevaluación 1</a>
-                    <a href="autoevaluacionDos.html">Autoevaluación 1</a>
+                    <a href="autoevaluacionDos.html">Autoevaluación 2ss</a>
                 </div>
             </li>
             <li><a href="autor.html">Autor</a></li>
