--- a/recursosDos.html
+++ b/recursosDos.html
@@ -49,13 +49,12 @@
             <ul class="cards">
                 <li class="cards_item">
                     <div class="card">
-                        <div class="card_image"><img src="img/css-child-html.jpg"></div>
+                        <div class="card_image">
+                            <iframe width="780" height="510" src="https://www.youtube.com/embed/UIo1p5s1BAY" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
                         <div class="card_content">
-                            <h2 class="card_title">La propiedad CSS display</h2>
-                            <p class="card_text">La propiedad CSS display especifica si un elemento es tratado como block or inline element y el diseño usado por sus hijos, como flow layout(Diseño de Flujo), grid(Cuadricula) o flex(Flexible). Formalmente la propiedad display
-                                establece los tipos de visualización interna y externa de un elemento. La tipo externa establece la participacion de un elemento en flow layout; la tipo interna establece el layout(Diseño) de los hijos. Algunos valores
-                                de display estan totalmente definidos con sus especificaciones propias; por ejemplo el detalle de que pasa cuando display: flex es declarado y definido en la especificacion de Modelo Flexible de Caja(Flexible Box Model
-                                specification) de CSS. Vea la siguientes tablas para mas especificaciones individuales.
+                            <h2 class="card_title">Estilos css: display block, inline, inline-block y float</h2>
+                            <p class="card_text">Introducción maquetación pagina web.
                             </p>
                             <!-- <button class="btn card_btn">Read More</button> -->
                         </div>
@@ -66,62 +65,15 @@
             <ul class="cards">
                 <li class="cards_item">
                     <div class="card">
+                        <div class="card_image">
+                            <iframe width="780" height="510" src="https://www.youtube.com/embed/VxzTYbbcrwk" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> </div>
                         <div class="card_content">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Definición</th>
-                                        <th>Establece el tipo de caja generada por un elemento</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td data-column="First Name">Valores permitidos</td>
-                                        <td data-column="Last Name">Uno y sólo uno de los siguientes valores:
-                                            <ul>
-                                                <li class="viñeta">inline</li>
-                                                <li class="viñeta">block</li>
-                                                <li class="viñeta">list-item</li>
-                                                <li class="viñeta">run-in</li>
-                                                <li class="viñeta">inline-block</li>
-                                                <li class="viñeta">table</li>
-                                                <li class="viñeta">inline-table</li>
-                                                <li class="viñeta">table-row-group</li>
-                                                <li class="viñeta">table-header-group</li>
-                                                <li class="viñeta">table-footer-group</li>
-                                                <li class="viñeta">table-row</li>
-                                                <li class="viñeta">table-column-group</li>
-                                                <li class="viñeta">table-column</li>
-                                                <li class="viñeta">table-cell</li>
-                                                <li class="viñeta">table-caption</li>
-                                                <li class="viñeta">none</li>
-                                                <li class="viñeta">inherit</a>
-                                                </li>
-                                            </ul>
-                                        </td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Valor inicial</td>
-                                        <td data-column="Last Name">inline</td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Se aplica a</td>
-                                        <td data-column="Last Name">Todos los elementos</td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Se hereda</td>
-                                        <td data-column="Last Name">no</td>
-
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <h2 class="card_title">Tutoriales de CSS - Display: inline, block e inline-block</h2>
+                            <p class="card_text">Introducción maquetación pagina web.
+                            </p>
+                            <!-- <button class="btn card_btn">Read More</button> -->
                         </div>
                     </div>
-
                 </li>
             </ul>
         </section>
