--- a/autoevaluacion.html
+++ b/autoevaluacion.html
@@ -48,18 +48,9 @@
         <section class="central">
             <ul class="cards">
                 <li class="cards_item">
-                    <div class="card">
-                        <div class="card_image"><img src="img/css-child-html.jpg"></div>
-                        <div class="card_content">
-                            <h2 class="card_title">La propiedad CSS display</h2>
-                            <p class="card_text">La propiedad CSS display especifica si un elemento es tratado como block or inline element y el diseño usado por sus hijos, como flow layout(Diseño de Flujo), grid(Cuadricula) o flex(Flexible). Formalmente la propiedad display
-                                establece los tipos de visualización interna y externa de un elemento. La tipo externa establece la participacion de un elemento en flow layout; la tipo interna establece el layout(Diseño) de los hijos. Algunos valores
-                                de display estan totalmente definidos con sus especificaciones propias; por ejemplo el detalle de que pasa cuando display: flex es declarado y definido en la especificacion de Modelo Flexible de Caja(Flexible Box Model
-                                specification) de CSS. Vea la siguientes tablas para mas especificaciones individuales.
-                            </p>
-                            <!-- <button class="btn card_btn">Read More</button> -->
-                        </div>
-                    </div>
+                    <iframe width="795" height="700" frameborder="0" src="https://es.educaplay.com/juego/7804585-propiedades_basicas_de_css.html"></iframe>
+
+
                 </li>
             </ul>
             <!--tabla -->
