--- a/autoevaluacionDos.html
+++ b/autoevaluacionDos.html
@@ -55,58 +55,7 @@
                 <li class="cards_item">
                     <div class="card">
                         <div class="card_content">
-                            <table>
-                                <thead>
-                                    <tr>
-                                        <th>Definición</th>
-                                        <th>Establece el tipo de caja generada por un elemento</th>
-
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td data-column="First Name">Valores permitidos</td>
-                                        <td data-column="Last Name">Uno y sólo uno de los siguientes valores:
-                                            <ul>
-                                                <li class="viñeta">inline</li>
-                                                <li class="viñeta">block</li>
-                                                <li class="viñeta">list-item</li>
-                                                <li class="viñeta">run-in</li>
-                                                <li class="viñeta">inline-block</li>
-                                                <li class="viñeta">table</li>
-                                                <li class="viñeta">inline-table</li>
-                                                <li class="viñeta">table-row-group</li>
-                                                <li class="viñeta">table-header-group</li>
-                                                <li class="viñeta">table-footer-group</li>
-                                                <li class="viñeta">table-row</li>
-                                                <li class="viñeta">table-column-group</li>
-                                                <li class="viñeta">table-column</li>
-                                                <li class="viñeta">table-cell</li>
-                                                <li class="viñeta">table-caption</li>
-                                                <li class="viñeta">none</li>
-                                                <li class="viñeta">inherit</a>
-                                                </li>
-                                            </ul>
-                                        </td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Valor inicial</td>
-                                        <td data-column="Last Name">inline</td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Se aplica a</td>
-                                        <td data-column="Last Name">Todos los elementos</td>
-
-                                    </tr>
-                                    <tr>
-                                        <td data-column="First Name">Se hereda</td>
-                                        <td data-column="Last Name">no</td>
-
-                                    </tr>
-                                </tbody>
-                            </table>
+                            <object type="application/pdf" data="pdf/Matriz-EvalSite.pdf#toolbar=0 &scrollbar=0" width="650" height="500"></object>
                         </div>
                     </div>
 
